samples/_failures_safe/1761129556_667da7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0505f68.c: In function ‘mesh_initialize’:
./samples/SAFE/__tmp_f0505f68.c:133:5: error: expected expression at end of input
  133 |     if (mesh ==
      |     ^~
./samples/SAFE/__tmp_f0505f68.c:133:5: error: expected declaration or statement at end of input
